About page responsive fix

--- a/about-us.html
+++ b/about-us.html
@@ -329,4 +329,11 @@ layout: page
       padding-right: 80px;
       padding-left: 80px;
    }
+
+
+   @media (max-width: 479px){
+      .about-manu{
+         margin-top: 18px;
+      }
+   }
 </style>
