--- a/sales.html
+++ b/sales.html
@@ -124,7 +124,7 @@ layout: page
                </div>
             </div>
          </section>
-         <section class="container">
+         <section class="container-fluid" style="padding: 0;">
             <div class="features-projects-completed mt-5">
                <h1>Over 9000 Projects Completed</h1>
                <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -198,3 +198,34 @@ layout: page
       </div>
       <!--=================================
          MAIN CONTENT -->
+
+
+<style type="text/css">
+
+   @media(min-width:600px) {
+      .CirItem h2{
+         /*height: 400px;*/
+         /*border: 1px solid black;  */
+         margin-top: 35px;
+         display: flex;
+         align-items: center;
+         justify-content: center;   
+      }
+   }
+   @media(max-width:600px) {
+      .CirItem h2{
+         /*border: 1px solid black;*/
+         /*height: inherit;*/
+         margin-top: -30px;
+         font-size: 15px;
+         max-width: 150px;
+         margin-left: auto;
+         margin-right: auto;
+         line-height: 30px;
+      }
+   }
+
+
+
+
+</style>
