Improved content of main section

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@ layout: page
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12">
-                    <h1 class="text-uppercase">Conversational commerce for D2C</h1>
-                    <h3 class="mt-4">Try a Pilot for 30 Days.</h3>
+                    <!-- TODO: Cycle between whatsapp, facebook, instagram, website chat -->
+                    <h1 class="text-uppercase">Convert any chat medium into a sales channel</h1>
+                    <h3 class="mt-4">Address pre-purchase concerns and complete checkout on chat using AI </h3>
                     <div class="form-row align-items-center justify-content-lg-start justify-content-center">
                         <!-- <div class="col-auto">
                             <button type="submit" class="button mb-2"><i class="ion-ios-paperplane"></i> Get Demo</button>
                         </div> -->
                         <div class="col-auto text-right">
                           <ul class="login">
-                             <li class="d-inline active" style="margin-left: 0;"><a href="contact-us.html">Let's Start</a></li>
+                             <li class="d-inline active" style="margin-left: 0;"><a href="contact-us.html">Show me how</a></li>
                           </ul>
                        </div>
                     </div>
+                    Backed by
                     <div class="toggle-image mt-5">
                         <img class="company-white" src="images/logos/y-combinator-white.png" height="40">
                         <img class="img-top" src="images/logos/y-combinator.png" height="40">
@@ -42,7 +44,7 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
-                    <h2 class="title text-dark">Join our Growing <span>D2C Family</span></h2>
+                    <h2 class="title text-dark">Join our Growing Family of <span>D2C Brands</span></h2>
                 </div>
             </div>
         </div>
