technology responsive fix

--- a/technology.html
+++ b/technology.html
@@ -28,9 +28,9 @@ layout: page
             Technology -->
             <!-- Technology Banner -->
             <div class="technology-banner">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="mt-5">
                             <h3 class="mb-3">India's First Level 3 Chatbot Technology</h3>
                             <h1 class="mb-3 title text-dark">Smarter and Effective Conversations</h1>            
@@ -111,22 +111,22 @@ layout: page
                 </div>
                 <div class="container">
                     <div class="row mt-5">
-                        <div class="col-lg-3 col-md-6 col-sm-12 px-5 technology-level3-card">
+                        <div class="col-lg-3 col-md-6 col-sm-12 px-5">
                             <img src="https://ik.imagekit.io/m52sq26n4h/userprofile.svg" class="img-fluid mb-4" alt=""/>
                             <h3 class="title">User Profile</h3>
                             <p>This consists of the user's preferences, personal details, chat history, and purchasing history</p>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 px-5 technology-level3-card">
+                        <div class="col-lg-3 col-md-6 col-sm-12 px-5">
                             <img src="https://ik.imagekit.io/m52sq26n4h/usergoal.svg" class="img-fluid mb-4" alt=""/>
                             <h3 class="title">User Goal</h3>
                             <p>This comprises of the specific task the user wants completed and its supporting details</p>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 px-5 technology-level3-card">
+                        <div class="col-lg-3 col-md-6 col-sm-12 px-5">
                             <img src="https://ik.imagekit.io/m52sq26n4h/conversationhistory.svg" class="img-fluid mb-4" alt=""/>
                             <h3 class="title">Conversation History</h3>
                             <p>This consists of the user's preferences, personal details, chat history, and purchasing history</p></p>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 px-5 technology-level3-card">
+                        <div class="col-lg-3 col-md-6 col-sm-12 px-5">
                             <img src="https://ik.imagekit.io/m52sq26n4h/worldKnowledgeicon.svg" class="img-fluid mb-4" alt=""/>
                             <h3 class="title">World Knowledge</h3>
                             <p>Based on the user profile and goal, words can have different interpretations</p>
