--- a/sales.html
+++ b/sales.html
@@ -26,7 +26,7 @@ layout: page
       <div class="main-content">
          <!--=================================
             Features -->
-         <section>
+         <section class="half-margin">
             <div class="container">
                <div class="row align-items-center features-demo">
                   <div class="col-lg-6 col-md-12 mt-5">
