Minor modifications to tech page

--- a/technology.html
+++ b/technology.html
@@ -52,7 +52,7 @@ layout: page
 							<!-- <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
 						</div>
 					</div>
-					<div class="row">
+					<div class="row mt-5">
 						<div class="col-md-6">
 							<div style="text-align: 'center'">
 								<img src="images/tech/2.svg" class="img-fluid " alt="" />
@@ -194,7 +194,7 @@ layout: page
 							</div>							
 						</div>
 						<div style="text-align : center">
-							<img src="https://ik.imagekit.io/m52sq26n4h/services/why-level-3.png" class="img-fluid mb-4" alt="" />
+							<img src="images/tech/1.png" class="img-fluid mb-4" alt="" />
 						</div>
 					</div>
 				</div>
@@ -208,7 +208,7 @@ layout: page
 						</div>
 					</div>
 					<div class="col-sm-12 mt-5">
-						<img src="https://ik.imagekit.io/m52sq26n4h/services/level-2-vs-level-3.png" class="img-fluid mb-4" alt="" />
+						<img src="images/tech/2.png" class="img-fluid mb-4" alt="" />
 					</div>
 					<!-- <div class="row mt-5">
 						<div class="col-sm-12">
