Added headers for client and features section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
-                    <h2 class="title text-dark">Join our Growing Family of <span>D2C Brands</span></h2>
+                    <h2 class="title text-dark">Adding value daily to the foremost <span>D2C Brands</span></h2>
                 </div>
             </div>
         </div>
@@ -67,15 +67,15 @@ layout: page
             <div class="row justify-content-md-center">
                 <div class="col-lg-8 col-sm-12 text-center">
                     <div class="title-box">
-                        <h2 class="title text-dark">Simple Platform to <span>Build & Deploy</span></h2>
-                        <p class="mt-2">Contrary to popular belief, Lorem Ipsum.</p>
+                        <h2 class="title text-dark">How we Add Value to <span>Leading Brands</span> </h2>
+                        <!-- <p class="mt-2">Contrary to popular belief, </p> -->
                     </div>
                 </div>
             </div>
             <div class="row align-items-center works-arrow1 m-top">
                 <div class="col-lg-6 col-sm-12">
                     <div class="title-box">
-                        <h2 class="title-light text-dark">Great Way to add Little Fun to Your <span>Corporate World</span></h2>
+                        <h2 class="title-light text-dark">Improve <span>Sales Conversions</span></h2>
                     </div>
                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable roots in a piece.</p>
                     <ul class="mt-4">
@@ -96,7 +96,7 @@ layout: page
             <div class="row align-items-center works-arrow2 m-top">
                 <div class="col-lg-6 col-sm-12 order-lg-2 order-1">
                     <div class="title-box">
-                        <h2 class="title-light text-dark">Chatbots are Just Another Way for <span>Millennials to Chat</span></h2>
+                        <h2 class="title-light text-dark">Automate <span>Customer Support</span> Queries</h2>
                     </div>
                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
                 </div>
@@ -111,7 +111,7 @@ layout: page
             <div class="row align-items-center m-top">
                 <div class="col-lg-6 col-sm-12">
                     <div class="title-box">
-                        <h2 class="title-light text-dark">Positive Feelings + Reduced Friction = <span>Fun & Conversions</span></h2>
+                        <h2 class="title-light text-dark">In-Depth <span>Analytics</span></h2>
                     </div>
                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
                     <a class="button grey mt-2" href="#" role="button">Read More</a>
