Added 404 error page

--- a/support.html
+++ b/support.html
@@ -86,32 +86,32 @@ layout: page
                         </div>
                         <div class="contentCircle">
                            <div class="CirItem title-box active CirItem7">
-                              <h2 class="title"><span>Assist Product Discovery</span></h2>
+                              <h2 class="title"><span>Automated Order Tracking</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-timer-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem8">
-                              <h2 class="title"><span>Answer Product Queries </span></h2>
+                              <h2 class="title"><span>On-Demand FAQs</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem9">
-                              <h2 class="title"><span>Offer Personalised Discounts</span></h2>
+                              <h2 class="title"><span>Live Agent Transfer</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-person-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem10">
-                              <h2 class="title"><span>Cross Sell & Up Sell</span></h2>
+                              <h2 class="title"><span>Order Modifications</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem11">
-                              <h2 class="title"><span>Show Social Proof</span></h2>
+                              <h2 class="title"><span>Order Cancellations</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-upload-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem12">
-                              <h2 class="title"><span>Qualify Potential Leads</span></h2>
+                              <h2 class="title"><span>Qualified Order Refunds</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            </div>
