--- a/404.html
+++ b/404.html
@@ -1,25 +1,33 @@
 ---
 permalink: /404.html
-layout: default
+layout: page
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+      <!--=================================
+         Banner -->
+      <div class="breadcrumbs">
+         <div class="container"></div>
+         <img class="img-fluid breadcrumbs-after" src="images/banner/banner-after.png" alt="image">
+      </div>
+      <!--=================================
+         Banner -->
+      <!--=================================
+         MAIN CONTENT -->
+      <div class="main-content">
+         <!--=================================
+            Error -->
+         <div class="error-box">
+            <div class="container">
+               <div class="row justify-content-center">
+                  <div class="col-sm-12">
+                     <div class="error text-center">  
+                        <img class="img-fluid w-50" src="images/error.svg" alt="image"><br>
+                        <a href="index.html" class="button mt-4">Go to Home Page</a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!--=================================
+            Error -->  
+      </div>
