Added content in features section

--- a/index.html
+++ b/index.html
@@ -75,15 +75,17 @@ layout: page
             <div class="row align-items-center works-arrow1 m-top">
                 <div class="col-lg-6 col-sm-12">
                     <div class="title-box">
-                        <h2 class="title-light text-dark">Improve <span>Sales Conversions</span></h2>
+                        <h2 class="title-light text-dark">Improved <span>Sales Conversions</span></h2>
                     </div>
-                    <p class="mt-4">It is a long established fact that a reader will be distracted by the readable roots in a piece.</p>
+                    <p class="mt-4">Upto 20% Increase in Sales Revenues</p>
                     <ul class="mt-4">
-                        <li class="mt-2"><i class="fas fa-check-circle"></i>Contrary to popular belief</li>
-                        <li class="mt-2"><i class="fas fa-check-circle"></i>The standard chunk of Lorem Ipsum used since</li>
-                        <li class="mt-2"><i class="fas fa-check-circle"></i>There are many variations of passages</li>
-                        <li class="mt-2"><i class="fas fa-check-circle"></i>Many desktop publishing packages</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Personalized Product Discovery to Minimize User Decisions</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Answer Pre-Purchase Queries to Improve Engagement</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Show Reviews and Social Proof to Increase Credibility</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Up-Selling and Cross-Selling to Increase Order Value</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Complete Checkout and Payment on Chat to Minimize Drop-Offs</li>
                     </ul>
+                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="works-box">
@@ -96,9 +98,16 @@ layout: page
             <div class="row align-items-center works-arrow2 m-top">
                 <div class="col-lg-6 col-sm-12 order-lg-2 order-1">
                     <div class="title-box">
-                        <h2 class="title-light text-dark">Automate <span>Customer Support</span> Queries</h2>
+                        <h2 class="title-light text-dark"><span>Customer Support</span> Automation</h2>
                     </div>
-                    <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                    <p class="mt-4">Better Customer Support Experience with Upto 70% Automation</p>
+                    <ul class="mt-4">
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Seamless Order Tracking through Chat</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Automatically Record and Escalate Order Complaints</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Handle Order Cancellations and Modifications</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Handle or Escalate Refund Requests</li>
+                    </ul>
+                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
                 </div>
                 <div class="col-lg-6 col-sm-12 order-lg-1 order-2">
                     <div class="works-box">
@@ -113,8 +122,15 @@ layout: page
                     <div class="title-box">
                         <h2 class="title-light text-dark">In-Depth <span>Analytics</span></h2>
                     </div>
-                    <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
-                    <a class="button grey mt-2" href="#" role="button">Read More</a>
+                    <p class="mt-4">Understand What, How and Who is Buying Through Chat</p>
+                    <ul class="mt-4">
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Understand User Journeys Across Workflows</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Measure Goal Completion Rates for Each Flow</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Track KPIs such as Sales Conversions, Revenue, and CSAT</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Understand User Browsing, Purchase and Payment Behaviour</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Know Your Users Better through Personalized Quizzes</li>
+                    </ul>
+                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="works-box">
