Fixed links and dashboard section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: page
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Up-Selling and Cross-Selling to Increase Order Value</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Complete Checkout and Payment on Chat to Minimize Drop-Offs</li>
                     </ul>
-                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
+                    <a class="button grey mt-2" href="/sales.html" role="button">Know More</a>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="works-box">
@@ -107,7 +107,7 @@ layout: page
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Handle Order Cancellations and Modifications</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Handle or Escalate Refund Requests</li>
                     </ul>
-                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
+                    <a class="button grey mt-2" href="/support.html" role="button">Know More</a>
                 </div>
                 <div class="col-lg-6 col-sm-12 order-lg-1 order-2">
                     <div class="works-box">
@@ -130,7 +130,7 @@ layout: page
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Understand User Browsing, Purchase and Payment Behaviour</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Know Your Users Better through Personalized Quizzes</li>
                     </ul>
-                    <a class="button grey mt-2" href="/features.html" role="button">Know More</a>
+                    <!-- <a class="button grey mt-2" href="/features.html" role="button">Know More</a> -->
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="works-box">
@@ -152,12 +152,12 @@ layout: page
             <div class="row justify-content-md-center">
                 <div class="col-lg-8 col-sm-12 text-center">
                     <div class="title-box">
-                        <h2 class="title text-dark">The Best Way to know What They Want is <span>Through a Chatbot.</span></h2>
-                        <p class="mt-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from a Latin professor.</p>
+                        <h2 class="title text-dark">Aggregate All Messaging Channels Into a <span>Single Agent Dashboard</span></h2>
+                        <p class="mt-4">Your Customer Support Team can respond to WhatsApp, Messenger, Instagram and Web Chat Messages from a single platform.</p>
                     </div>
-                    <div class="mt-4">
+                    <!-- <div class="mt-4">
                         <a href="about-us.html" class="read-more mt-5">Learn More</a>
-                    </div>
+                    </div> -->
                     <img class="img-fluid dashboard-img mt-5" src="images/dashboard/2.png" alt="image" />
                 </div>
             </div>
