Added content in CTA section

--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
-                    <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
-                    <p class="mt-2">Get in touch or create an account.</p>
+                    <h2 class="title text-dark">Ready to Supercharge Your Growth?</h2>
+                    <p class="mt-2">Schedule a call with our Conversational Sales Expert.</p>
                 </div>
             </div>
         </div>
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div>
-                    <a class="button" href="contact-us.html">Request a demo</a>
+                    <a class="button" href="contact-us.html">Schedule a demo</a>
                 </div>
             </div>
         </div>
