Minor changes in client header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
-                    <h2 class="title text-dark">Adding value daily to the foremost <span>D2C Brands</span></h2>
+                    <h2 class="title text-dark"><span>D2C Market Leaders</span> use Limechat</h2>
                 </div>
             </div>
         </div>
