--- a/sales.html
+++ b/sales.html
@@ -31,10 +31,12 @@ layout: page
                <div class="row align-items-center features-demo">
                   <div class="col-lg-6 col-md-12 mt-5">
                      <div class="title-box">
-                        <h5 class="title text-dark">Get Those <span>Window Shoppers</span> Interested</h5>
+                        <h5 class="title text-dark">Convert </h5>
+                        <h5 class="title text-dark"><span>Window Shoppers</span> To </h5>
+                        <h5 class="title text-dark"><span>Loyal Customers</span></h5>
                      </div>
-                     <p class="mt-4">Get 18% more online conversions</p>
-                     <a class="button grey mt-2" href="#" role="button">Get Demo</a>
+                     <p class="mt-4">Increase Sales Revenues by 20% by Leveraging Chat</p>
+                     <a class="button grey mt-2" href="#" role="button">Schedule a Demo</a>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
                      <img class="img-fluid top-img1 w-100" src="images/features/1.svg" alt="image">
@@ -45,7 +47,7 @@ layout: page
                      <div class="title-box">
                         <h2 class="title-light text-dark">The Best Way to know What They Want is <span>Through a Chatbot.</span></h2>
                      </div>
-                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <!-- <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -127,7 +129,7 @@ layout: page
          <section class="container-fluid" style="padding: 0;">
             <div class="features-projects-completed mt-5">
                <h1>Over 9000 Projects Completed</h1>
-               <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+               <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
                   <div class="col-md-4">
                      <h1>2500+</h1>
