--- a/sales.html
+++ b/sales.html
@@ -45,9 +45,9 @@ layout: page
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
                      <div class="title-box">
-                        <h2 class="title-light text-dark">The Best Way to know What They Want is <span>Through a Chatbot.</span></h2>
+                        <h2 class="title-light text-dark">Guide Users Through Each Step of the <span>Pre-Purchase Journey</span> using a <span>Chatbot</span></h2>
                      </div>
-                     <!-- <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                     <p class="mt-4">Check out how we reduce drop-offs at each step of the user journey</p>
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -128,20 +128,20 @@ layout: page
          </section>
          <section class="container-fluid" style="padding: 0;">
             <div class="features-projects-completed mt-5">
-               <h1>Over 9000 Projects Completed</h1>
+               <h1>Over 10,000 Purchases Handled</h1>
                <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
                   <div class="col-md-4">
-                     <h1>2500+</h1>
-                     <h3>Clients</h3>
+                     <h1>20+</h1>
+                     <h3>Enterprise Clients</h3>
                   </div>
                   <div class="col-md-4">
-                     <h1>$100M+</h1>
-                     <h3>Revenue</h3>
+                     <h1>>15%</h1>
+                     <h3>Boost in Conversions</h3>
                   </div>
                   <div class="col-md-4">
-                     <h1>150+</h1>
-                     <h3>Employees</h3>
+                     <h1>>20%</h1>
+                     <h3>Revenue Increase</h3>
                   </div>
                </div>
             </div>
@@ -151,7 +151,7 @@ layout: page
                <div class="row justify-content-md-center mb-3">
                   <div class="col-lg-9 col-sm-12 text-center mt-5">
                      <div class="title-box">
-                        <h2 class="title text-dark">We Connect with your <span>Favorite Channels</span></h2>
+                        <h2 class="title text-dark">Connect with Your Users' <span>Favorite Channels</span></h2>
                      </div>
                   </div>
                   <div class="col-lg-12 col-md-12 mt-5 mb-5 text-center">
@@ -178,15 +178,15 @@ layout: page
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div class="title-box">
-                          <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
-                          <p class="mt-2">Get in touch or create an account.</p>
+                          <h2 class="title text-dark">Are You Ready to Supercharge your <span>Pre-Purchase Conversions?</span></h2>
+                          <p class="mt-2">Schedule a call with our Conversational Sales Expert.</p>
                       </div>
                   </div>
               </div>
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div>
-                          <a class="button" href="contact-us.html">Request a demo</a>
+                          <a class="button" href="contact-us.html">Schedule a demo</a>
                       </div>
                   </div>
               </div>
