--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ layout: page
                     <ul class="mt-4">
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Personalized Product Discovery to Minimize User Decisions</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Answer Pre-Purchase Queries to Improve Engagement</li>
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Capture Impulse Buyers through Instant Replies</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Show Reviews and Social Proof to Increase Credibility</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Up-Selling and Cross-Selling to Increase Order Value</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Complete Checkout and Payment on Chat to Minimize Drop-Offs</li>
@@ -102,6 +103,7 @@ layout: page
                     </div>
                     <p class="mt-4">Better Customer Support Experience with Upto 70% Automation</p>
                     <ul class="mt-4">
+                        <li class="mt-2"><i class="fas fa-check-circle"></i>Cut Resolution Times to 1/10 through Instant Replies </li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Seamless Order Tracking through Chat</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Automatically Record and Escalate Order Complaints</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Handle Order Cancellations and Modifications</li>
@@ -178,7 +180,7 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div>
-                    <a class="button" href="contact-us.html">Schedule a demo</a>
+                    <a class="button" href="contact-us.html">Schedule a Demo</a>
                 </div>
             </div>
         </div>
