--- a/sales.html
+++ b/sales.html
@@ -45,7 +45,7 @@ layout: page
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
                      <div class="title-box">
-                        <h2 class="title-light text-dark">Guide Users Through Each Step of the <span>Pre-Purchase Journey</span> using a <span>Chatbot</span></h2>
+                        <h2 class="title-light text-dark">Guide Users Through Each Step of the <span>Pre-Purchase Journey</span> using our <span>Chatbot</span></h2>
                      </div>
                      <p class="mt-4">Check out how we reduce drop-offs at each step of the user journey</p>
                   </div>
@@ -186,7 +186,7 @@ layout: page
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div>
-                          <a class="button" href="contact-us.html">Schedule a demo</a>
+                          <a class="button" href="contact-us.html">Schedule a Demo</a>
                       </div>
                   </div>
               </div>
