--- a/support.html
+++ b/support.html
@@ -33,8 +33,8 @@ layout: page
                      <div class="title-box">
                         <h5 class="title text-dark">Deliver <span>Delightful</span> Customer Experiences</h5>
                      </div>
-                     <p class="mt-4">Reduce Support Cost by 50%</p>
-                     <a class="button grey mt-2" href="#" role="button">Get Demo</a>
+                     <p class="mt-4">While Automating 70% of Customer Support Queries</p>
+                     <a class="button grey mt-2" href="#" role="button">Schedule a Demo</a>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
                      <img class="img-fluid top-img1 w-100" src="images/features/2.svg" alt="image">
@@ -43,9 +43,9 @@ layout: page
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
                      <div class="title-box">
-                        <h2 class="title-light text-dark">The Best Way to know What They Want is <span>Through a Chatbot.</span></h2>
+                        <h2 class="title-light text-dark">Deliver <span>Quick and Delightful</span> Customer Experiences at Scale using our <span>Chatbot.</span></h2>
                      </div>
-                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p class="mt-4">Check out how we automatically handle different customer support queries</p>
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -176,15 +176,15 @@ layout: page
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div class="title-box">
-                          <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
-                          <p class="mt-2">Get in touch or create an account.</p>
+                          <h2 class="title text-dark">Are You Ready to Supercharge your Customer Support at <span>half the cost?</span></h2>
+                          <p class="mt-2">Schedule a call with our Support Automation Expert</p>
                       </div>
                   </div>
               </div>
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div>
-                          <a class="button" href="contact-us.html">Request a demo</a>
+                          <a class="button" href="contact-us.html">Schedule a Demo</a>
                       </div>
                   </div>
               </div>
