--- a/support.html
+++ b/support.html
@@ -126,20 +126,20 @@ layout: page
          </section>
          <section class="container-fluid" style="padding: 0;">
             <div class="features-projects-completed mt-5">
-               <h1>Over 9000 Projects Completed</h1>
-               <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+               <h1>Over 10,000 Support Messages Automated</h1>
+               <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
                   <div class="col-md-4">
-                     <h1>2500+</h1>
-                     <h3>Clients</h3>
+                     <h1>20+</h1>
+                     <h3>Enterprise Clients</h3>
                   </div>
                   <div class="col-md-4">
-                     <h1>$100M+</h1>
-                     <h3>Revenue</h3>
+                     <h1>>70%</h1>
+                     <h3>Automation of Support Queries</h3>
                   </div>
                   <div class="col-md-4">
-                     <h1>150+</h1>
-                     <h3>Employees</h3>
+                     <h1>>1000%</h1>
+                     <h3>Decrease in Resolution Times</h3>
                   </div>
                </div>
             </div>
