Added cover pics to home page

--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,7 @@ layout: page
                            <div class="row mt-5 pt-3">
                               <div class="col-lg-6 col-md-12">
                                  <div class="title-box">
-                                    <h2 class="title-light text-dark">Our Company <span>Values</span></h2>
+                                    <h2 class="title-light text-dark">About <span>LimeChat</span></h2>
                                  </div>
                                  <p class="mt-4"><strong>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</strong></p>
                                  <p class="mt-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
@@ -53,7 +53,7 @@ layout: page
                            <div class="row">
                               <div class="col-lg-6 col-md-12 mt-5">
                                  <div class="title-box">
-                                    <h3 class="title-light text-dark">Long Term <span> Company Thinking</span></h3>
+                                    <h3 class="title-light text-dark">The Long Term <span>Vision</span></h3>
                                  </div>
                                  <p class="mt-2">It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                                  <ul class="iq-list mt-4">
@@ -63,7 +63,7 @@ layout: page
                               </div>
                               <div class="col-lg-6 col-md-12 mt-5">
                                  <div class="title-box">
-                                    <h3 class="title-light text-dark"><span>Creativity</span></h3>
+                                    <h3 class="title-light text-dark">Company <span>Values</span></h3>
                                  </div>
                                  <p class="mt-2">It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                                  <ul class="iq-list mt-4">
