--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 <!--=================================
          Banner -->
 <div id="banner" class="banner">
-    <div class="banner-text">
+    <div class="banner-text mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12">
@@ -28,7 +28,7 @@ layout: page
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12 col-sm-12 text-right">
-                    <img class="img-fluid banner-img" src="images/banner/3.svg" alt="image" />
+                    <img class="img-fluid banner-img" src="images/banner/cover.png" alt="image" />
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@ layout: page
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
-                        <img class="img-fluid top-img1 i-size" src="images/works/02.gif" alt="image" />
+                        <img class="img-fluid top-img1 i-size" src="images/banner/1.png" alt="image" />
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@ layout: page
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
-                        <img class="img-fluid top-img1 i-size" src="images/works/01.gif" alt="image" />
+                        <img class="img-fluid top-img1 i-size" src="images/banner/2.png" alt="image" />
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@ layout: page
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
-                        <img class="img-fluid top-img1 i-size" src="images/works/02.gif" alt="image" />
+                        <img class="img-fluid top-img1 i-size" src="images/banner/2.png" alt="image" />
                     </div>
                 </div>
             </div>
@@ -200,8 +200,8 @@ layout: page
         opacity: .5;
     }
     .toggle-image {
-        width: 130px;
-        height: 195px;
+        /*width: 130px;*/
+        /*height: 195px;*/
         position: relative;
         display: inline-block;
     }
