--- a/technology.html
+++ b/technology.html
@@ -113,22 +113,22 @@ layout: page
                <div class="container">
                   <div class="row mt-5">
                      <div class="col-lg-3 col-md-6 col-sm-12 px-5">
-                        <img src="https://ik.imagekit.io/m52sq26n4h/userprofile.svg" class="img-fluid mb-4" alt=""/>
+                        <img src="images/tech/3.png" class="img-fluid mb-4" alt=""/>
                         <h3 class="title">User Profile</h3>
                         <p>This consists of the user's preferences, personal details, chat history, and purchasing history</p>
                      </div>
                      <div class="col-lg-3 col-md-6 col-sm-12 px-5">
-                        <img src="https://ik.imagekit.io/m52sq26n4h/usergoal.svg" class="img-fluid mb-4" alt=""/>
+                        <img src="images/tech/4.png" class="img-fluid mb-4" alt=""/>
                         <h3 class="title">User Goal</h3>
                         <p>This comprises of the specific task the user wants completed and its supporting details</p>
                      </div>
                      <div class="col-lg-3 col-md-6 col-sm-12 px-5">
-                        <img src="https://ik.imagekit.io/m52sq26n4h/conversationhistory.svg" class="img-fluid mb-4" alt=""/>
+                        <img src="images/tech/5.png" class="img-fluid mb-4" alt=""/>
                         <h3 class="title">Conversation History</h3>
                         <p>This consists of the user's preferences, personal details, chat history, and purchasing history</p></p>
                      </div>
                      <div class="col-lg-3 col-md-6 col-sm-12 px-5">
-                        <img src="https://ik.imagekit.io/m52sq26n4h/worldKnowledgeicon.svg" class="img-fluid mb-4" alt=""/>
+                        <img src="images/tech/6.png" class="img-fluid mb-4" alt=""/>
                         <h3 class="title">World Knowledge</h3>
                         <p>Based on the user profile and goal, words can have different interpretations</p>
                      </div>
